--- a/Styles/main.css
+++ b/Styles/main.css
@@ -16,6 +16,14 @@
     margin-right: auto;
 }
 
+.bodytext {
+    text-align: center;
+    color: red;
+    font-size: 20px;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 .btnPlay button{
