--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -1,57 +1,4 @@
-﻿/*
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: royalblue;
-    height: auto;
-    width: 100vw;
-    padding-top: 5px;
-    color: yellow;
-}
-
-.fa {
-    padding: 5px;
-    font-size: 8px;
-    width: 25px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-}
-
-    .fa:hover {
-        opacity: 0.7;
-    }
-
-.fa-facebook {
-    background: yellow;
-    color: white;
-}
-
-.fa-twitter {
-    background: yellow;
-    color: white;
-}
-
-.fa-google {
-    background: yellow;
-    color: white;
-}
-
-.fa-linkedin {
-    background: yellow;
-    color: white;
-}
-*/
-/* Footer */ 
-*{
+﻿*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
